sliding menu commit, testing phase

--- a/app/src/main/res/layout/fragment_general.xml
+++ b/app/src/main/res/layout/fragment_general.xml
@@ -1,13 +1,41 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="adi.sf1.targaryen.newyorktimes.GeneralFragment">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+ android:padding="16dp"
+android:background="@color/white_color"
+tools:context="adi.sf1.targaryen.newyorktimes.GeneralFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"/>
+        android:id="@+id/amino_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="24dp"
+        android:text="@string/amino_title"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:textColor="@color/black_color"
+        android:layout_centerHorizontal="true"/>
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/amino_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/amino_title"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp"
+        android:src="@drawable/nyt_logo"/>
+
+    <TextView
+        android:id="@+id/amino_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="16dp"
+        android:text="@string/amino_content"
+        android:layout_marginTop="24dp"
+        android:layout_below="@+id/amino_image"/>
+
+</RelativeLayout>
+
