--- a/app/src/main/res/layout/fragment_physical.xml
+++ b/app/src/main/res/layout/fragment_physical.xml
@@ -2,7 +2,7 @@
 xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:padding="16dp"
-tools:context="adi.sf1.targaryen.newyorktimes.GeneralFragment">
+tools:context="adi.sf1.targaryen.newyorktimes.PhysicalFragment">
 
     <TextView
         android:layout_width="match_parent"
