Got recycler view working

--- a/app/src/main/res/layout/card_view_article_feed.xml
+++ b/app/src/main/res/layout/card_view_article_feed.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="vertical">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/cv"
+        android:layout_marginBottom="15dp"
         >
 
         <RelativeLayout
@@ -16,46 +18,47 @@
             >
 
             <ImageView
+                android:id="@+id/image_recycler"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/image_view_article"
-                android:layout_alignParentLeft="true"
+                android:layout_centerHorizontal="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginRight="16dp"
                 />
 
             <TextView
-                android:id="@+id/text_view_title"
+                android:id="@+id/title_text_recycler"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/image_view_article"
-               android:text="@string/article_title"
+                android:layout_below="@+id/image_recycler"
+                android:text="@string/article_title"
                 />
 
             <TextView
+                android:id="@+id/author_text_recycler"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/text_view_date"
-                android:layout_toRightOf="@+id/image_view_article"
-                android:layout_below="@+id/text_view_title"
-                android:hint="@string/article_date"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/text_view_author"
-                android:layout_toRightOf="@+id/image_view_article"
-                android:layout_below="@+id/text_view_date"
+                android:layout_below="@+id/title_text_recycler"
                 android:hint="@string/article_author"
                 />
+
             <TextView
-                android:id="@+id/text_view_snippet"
+                android:id="@+id/date_text_recycler"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/image_view_article"
-                android:layout_below="@+id/text_view_author"
-                android:maxLines="1"
+                android:layout_below="@+id/title_text_recycler"
+                android:layout_marginLeft="50sp"
+                android:layout_toEndOf="@id/author_text_recycler"
+                android:hint="@string/article_date"
+                />
+
+            <TextView
+                android:id="@+id/snippet_text_recycler"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/author_text_recycler"
                 android:ellipsize="end"
+                android:maxLines="1"
                 android:text="@string/snippet"
                 />
 
