--- a/app/src/main/res/layout/fragment_article.xml
+++ b/app/src/main/res/layout/fragment_article.xml
@@ -13,13 +13,13 @@
 
         <ImageView
 
-            android:id="@+id/image_view_article"
+            android:id="@+id/image_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:scaleType="centerCrop" />
         <TextView
-            android:id="@+id/text_view_title"
+            android:id="@+id/title_text_recycler"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
@@ -34,7 +34,7 @@
 
 
     <TextView
-        android:id="@+id/text_view_date"
+        android:id="@+id/date_text_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@android:color/black"
@@ -43,7 +43,7 @@
 
 
     <TextView
-        android:id="@+id/text_view_author"
+        android:id="@+id/author_text_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@android:color/black"
@@ -54,7 +54,7 @@
 
 
     <TextView
-        android:id="@+id/text_view_snippet"
+        android:id="@+id/snippet_text_recycler"
         android:text="CONTENT"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
