--- a/app/src/main/res/layout/card_view_article_feed.xml
+++ b/app/src/main/res/layout/card_view_article_feed.xml
@@ -8,61 +8,75 @@
         android:id="@+id/cv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        >
+        android:layout_marginBottom="15dp">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="16dp"
-            >
+            android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/image_article"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="220dp"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginRight="16dp"
-                />
+                android:orientation="vertical"
+                android:padding="16dp">
 
-            <TextView
-                android:id="@+id/title_text_article"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/title_text_article"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/article_title"
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/author_text_article"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/article_author"/>
+
+                    <TextView
+                        android:id="@+id/content_text_article"
+                        android:textSize="13sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginTop="10dp"
+                        android:ellipsize="end"
+                        android:paddingEnd="10dp"
+                        android:paddingRight="10dp"
+
+                        android:text="@string/snippet"/>
+
+                    <TextView
+                        android:id="@+id/date_text_article"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:textSize="13sp"
+                        android:hint="@string/article_date"/>
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/image_article"
-                android:text="@string/article_title"
-                />
+                android:orientation="vertical"
+                android:gravity="center_vertical|end">
 
-            <TextView
-                android:id="@+id/author_text_article"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/title_text_article"
-                android:hint="@string/article_author"
-                />
+                <ImageView
+                    android:id="@+id/image_article"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="30dp"
+                    android:background="@android:color/darker_gray"/>
 
-            <TextView
-                android:id="@+id/date_text_article"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/title_text_article"
-                android:layout_marginLeft="50sp"
-                android:layout_toEndOf="@id/author_text_article"
-                android:hint="@string/article_date"
-                />
-
-            <TextView
-                android:id="@+id/content_text_article"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/author_text_article"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="@string/snippet"
-                />
-
-        </RelativeLayout>
+            </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
