Added sharing feature

--- a/app/src/main/res/layout/activity_article.xml
+++ b/app/src/main/res/layout/activity_article.xml
@@ -63,6 +63,12 @@
 
     </LinearLayout>
 
+    <ImageButton
+        android:id="@+id/shareButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_menu_share"/>
+
 
     <TextView
         android:id="@+id/date_text_article"
