--- a/app/src/main/res/layout/card_view_article_feed.xml
+++ b/app/src/main/res/layout/card_view_article_feed.xml
@@ -16,7 +16,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="220dp"
+                android:layout_width="260dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="16dp">
@@ -26,6 +26,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/article_title"
+                    android:textColor="@android:color/black"
                     android:textSize="18sp"
                     android:textStyle="bold"/>
 
@@ -68,16 +69,14 @@
 
                 <ImageView
                     android:id="@+id/image_article"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginBottom="16dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginRight="16dp"
                     android:layout_marginTop="30dp"
-                    android:background="@android:color/darker_gray"/>
-
+                    android:background="@android:color/transparent"/>
             </LinearLayout>
-
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
