--- a/app/src/main/res/layout/card_view_article_feed_first.xml
+++ b/app/src/main/res/layout/card_view_article_feed_first.xml
@@ -17,11 +17,10 @@
 
             <ImageView
                 android:id="@+id/image_article"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="match_parent"
+                android:layout_height="170dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="5dp"
-                android:background="@android:color/darker_gray"/>
+                android:background="@android:color/transparent"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -34,7 +33,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/article_title"
-                    android:textSize="18sp"
+                    android:layout_marginTop="10dp"
+                    android:textSize="26sp"
+                    android:textColor="@android:color/black"
                     android:textStyle="bold"/>
 
                 <TextView
@@ -53,7 +54,6 @@
                     android:ellipsize="end"
                     android:paddingEnd="10dp"
                     android:paddingRight="10dp"
-
                     android:text="@string/snippet"/>
 
                 <TextView
