--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu
+    xmlns:android1="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
 
     <item
-        android:id="@+id/action_settings">
+        android1:id="@+id/preferences"
+        android1:title="@string/preferences"
+        app:showAsAction="never"/>
 
-    </item>
+    <item android1:id="@+id/search_articles"
+          android1:title="@string/search_articles"
+          app:showAsAction="never"/>
+
 </menu>
