--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -22,7 +22,7 @@
             android:id="@+id/checkbox_top_stories"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onCheckboxClicked"/>
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -40,7 +40,7 @@
             android:id="@+id/checkbox_most_popular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onCheckboxClicked"/>
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -57,8 +57,7 @@
         <CheckBox
             android:id="@+id/checkbox_opinion"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="onCheckboxClicked"/>
+            android:layout_height="wrap_content"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -76,7 +75,7 @@
             android:id="@+id/checkbox_world"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onCheckboxClicked"/>
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -94,7 +93,7 @@
             android:id="@+id/checkbox_us"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onCheckboxClicked"/>
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -112,7 +111,7 @@
             android:id="@+id/checkbox_business_day"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onCheckboxClicked"/>
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -130,7 +129,7 @@
             android:id="@+id/checkbox_sports"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onCheckboxClicked"/>
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -148,7 +147,7 @@
             android:id="@+id/checkbox_arts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onCheckboxClicked"/>
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -166,7 +165,7 @@
             android:id="@+id/checkbox_ny"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onCheckboxClicked"/>
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -184,7 +183,7 @@
             android:id="@+id/checkbox_magazine"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onCheckboxClicked"/>
+            />
 
         <TextView
             android:layout_width="wrap_content"
