--- a/app/src/main/res/layout-land/card_view_article_feed.xml
+++ b/app/src/main/res/layout-land/card_view_article_feed.xml
@@ -82,7 +82,7 @@
                 android:layout_marginEnd="40dp"
                 android:layout_marginRight="40dp"
                 android:layout_marginTop="30dp"
-                android:background="@android:color/darker_gray"/>
+                android:background="@android:color/transparent"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
