--- a/app/src/main/res/layout-large/card_view_article_feed_first.xml
+++ b/app/src/main/res/layout-large/card_view_article_feed_first.xml
@@ -20,7 +20,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:layout_gravity="center_horizontal"
-                android:background="@android:color/darker_gray"/>
+                android:background="@android:color/transparent"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
