--- a/app/src/main/res/layout/card_view_article_feed.xml
+++ b/app/src/main/res/layout/card_view_article_feed.xml
@@ -75,7 +75,7 @@
                     android:layout_marginEnd="16dp"
                     android:layout_marginRight="16dp"
                     android:layout_marginTop="30dp"
-                    android:background="@android:color/darker_gray"/>
+                    android:background="@android:color/transparent"/>
             </LinearLayout>
     </android.support.v7.widget.CardView>
 
