twitter logo changed

--- a/app/src/main/res/layout/activity_article.xml
+++ b/app/src/main/res/layout/activity_article.xml
@@ -34,8 +34,8 @@
             android:id="@+id/twitter_share_button"
             android:layout_column="1"
             android:layout_height="match_parent"
-            android:src="@drawable/tw__btn_composer_tweet"
-            android:background="@color/tw__composer_blue"
+            android:src="@drawable/twitter_button"
+            android:background="@color/tw__composer_white"
             />
 
         <ImageButton
