--- a/app/src/main/res/layout-large/card_view_article_feed.xml
+++ b/app/src/main/res/layout-large/card_view_article_feed.xml
@@ -52,8 +52,7 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="bottom">
+                    android:layout_height="match_parent">
 
                     <TextView
                         android:id="@+id/date_text_article"
